--- a/MicroGames2.uproject
+++ b/MicroGames2.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{B59C7223-46F1-E19F-D026-DAB985767440}",
+	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
